src/lexer/src/spec/PipeQLParser.cpp

// Generated from src/spec/PipeQL.g4 by ANTLR 4.13.2


#include "PipeQLListener.h"
#include "PipeQLVisitor.h"

#include "PipeQLParser.h"


using namespace antlrcpp;
using namespace pipeql;

using namespace antlr4;

namespace {

struct PipeQLParserStaticData final {
  PipeQLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PipeQLParserStaticData(const PipeQLParserStaticData&) = delete;
  PipeQLParserStaticData(PipeQLParserStaticData&&) = delete;
  PipeQLParserStaticData& operator=(const PipeQLParserStaticData&) = delete;
  PipeQLParserStaticData& operator=(PipeQLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pipeqlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PipeQLParserStaticData> pipeqlParserStaticData = nullptr;

void pipeqlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (pipeqlParserStaticData != nullptr) {
    return;
  }
#else
  assert(pipeqlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PipeQLParserStaticData>(
    std::vector<std::string>{
      "query", "fromClause", "pipeOperator", "selectOperator", "whereOperator", 
      "orderByOperator", "unionOperator", "intersectOperator", "exceptOperator", 
      "assertOperator", "limitClause", "offsetClause", "selectExpression", 
      "orderExpression", "booleanExpression", "comparisonOperator", "payloadExpression", 
      "expression", "functionCall", "literal", "aliasClause"
    },
    std::vector<std::string>{
      "", "','", "'ALL'", "'DISTINCT'", "'('", "')'", "'*'", "'=='", "'>'", 
      "'<'", "'>='", "'<='", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "'|>'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "FROM", "SELECT", 
      "AS", "WHERE", "ORDER_BY", "ASC", "DESC", "UNION", "INTERSECT", "EXCEPT", 
      "ASSERT", "LIMIT", "OFFSET", "BETWEEN", "AND", "PIPE_OPERATOR", "IDENTIFIER", 
      "STRING", "NUMBER", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pipeqlParserStaticData = std::move(staticData);
}

}

PipeQLParser::PipeQLParser(TokenStream *input) : PipeQLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PipeQLParser::PipeQLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PipeQLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pipeqlParserStaticData->atn, pipeqlParserStaticData->decisionToDFA, pipeqlParserStaticData->sharedContextCache, options);
}

PipeQLParser::~PipeQLParser() {
  delete _interpreter;
}

const atn::ATN& PipeQLParser::getATN() const {
  return *pipeqlParserStaticData->atn;
}

std::string PipeQLParser::getGrammarFileName() const {
  return "PipeQL.g4";
}

const std::vector<std::string>& PipeQLParser::getRuleNames() const {
  return pipeqlParserStaticData->ruleNames;
}

const dfa::Vocabulary& PipeQLParser::getVocabulary() const {
  return pipeqlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PipeQLParser::getSerializedATN() const {
  return pipeqlParserStaticData->serializedATN;
}


//----------------- QueryContext ------------------------------------------------------------------

PipeQLParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PipeQLParser::FromClauseContext* PipeQLParser::QueryContext::fromClause() {
  return getRuleContext<PipeQLParser::FromClauseContext>(0);
}

tree::TerminalNode* PipeQLParser::QueryContext::EOF() {
  return getToken(PipeQLParser::EOF, 0);
}

std::vector<PipeQLParser::PipeOperatorContext *> PipeQLParser::QueryContext::pipeOperator() {
  return getRuleContexts<PipeQLParser::PipeOperatorContext>();
}

PipeQLParser::PipeOperatorContext* PipeQLParser::QueryContext::pipeOperator(size_t i) {
  return getRuleContext<PipeQLParser::PipeOperatorContext>(i);
}


size_t PipeQLParser::QueryContext::getRuleIndex() const {
  return PipeQLParser::RuleQuery;
}

void PipeQLParser::QueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery(this);
}

void PipeQLParser::QueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery(this);
}


std::any PipeQLParser::QueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitQuery(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::QueryContext* PipeQLParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 0, PipeQLParser::RuleQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    fromClause();
    setState(46);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PipeQLParser::PIPE_OPERATOR) {
      setState(43);
      pipeOperator();
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(49);
    match(PipeQLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FromClauseContext ------------------------------------------------------------------

PipeQLParser::FromClauseContext::FromClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::FromClauseContext::FROM() {
  return getToken(PipeQLParser::FROM, 0);
}

tree::TerminalNode* PipeQLParser::FromClauseContext::IDENTIFIER() {
  return getToken(PipeQLParser::IDENTIFIER, 0);
}

PipeQLParser::AliasClauseContext* PipeQLParser::FromClauseContext::aliasClause() {
  return getRuleContext<PipeQLParser::AliasClauseContext>(0);
}


size_t PipeQLParser::FromClauseContext::getRuleIndex() const {
  return PipeQLParser::RuleFromClause;
}

void PipeQLParser::FromClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFromClause(this);
}

void PipeQLParser::FromClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFromClause(this);
}


std::any PipeQLParser::FromClauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitFromClause(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::FromClauseContext* PipeQLParser::fromClause() {
  FromClauseContext *_localctx = _tracker.createInstance<FromClauseContext>(_ctx, getState());
  enterRule(_localctx, 2, PipeQLParser::RuleFromClause);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(PipeQLParser::FROM);
    setState(52);
    match(PipeQLParser::IDENTIFIER);
    setState(54);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PipeQLParser::AS) {
      setState(53);
      aliasClause();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PipeOperatorContext ------------------------------------------------------------------

PipeQLParser::PipeOperatorContext::PipeOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::PipeOperatorContext::PIPE_OPERATOR() {
  return getToken(PipeQLParser::PIPE_OPERATOR, 0);
}

PipeQLParser::SelectOperatorContext* PipeQLParser::PipeOperatorContext::selectOperator() {
  return getRuleContext<PipeQLParser::SelectOperatorContext>(0);
}

PipeQLParser::WhereOperatorContext* PipeQLParser::PipeOperatorContext::whereOperator() {
  return getRuleContext<PipeQLParser::WhereOperatorContext>(0);
}

PipeQLParser::OrderByOperatorContext* PipeQLParser::PipeOperatorContext::orderByOperator() {
  return getRuleContext<PipeQLParser::OrderByOperatorContext>(0);
}

PipeQLParser::UnionOperatorContext* PipeQLParser::PipeOperatorContext::unionOperator() {
  return getRuleContext<PipeQLParser::UnionOperatorContext>(0);
}

PipeQLParser::IntersectOperatorContext* PipeQLParser::PipeOperatorContext::intersectOperator() {
  return getRuleContext<PipeQLParser::IntersectOperatorContext>(0);
}

PipeQLParser::ExceptOperatorContext* PipeQLParser::PipeOperatorContext::exceptOperator() {
  return getRuleContext<PipeQLParser::ExceptOperatorContext>(0);
}

PipeQLParser::AssertOperatorContext* PipeQLParser::PipeOperatorContext::assertOperator() {
  return getRuleContext<PipeQLParser::AssertOperatorContext>(0);
}

PipeQLParser::LimitClauseContext* PipeQLParser::PipeOperatorContext::limitClause() {
  return getRuleContext<PipeQLParser::LimitClauseContext>(0);
}


size_t PipeQLParser::PipeOperatorContext::getRuleIndex() const {
  return PipeQLParser::RulePipeOperator;
}

void PipeQLParser::PipeOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPipeOperator(this);
}

void PipeQLParser::PipeOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPipeOperator(this);
}


std::any PipeQLParser::PipeOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitPipeOperator(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::PipeOperatorContext* PipeQLParser::pipeOperator() {
  PipeOperatorContext *_localctx = _tracker.createInstance<PipeOperatorContext>(_ctx, getState());
  enterRule(_localctx, 4, PipeQLParser::RulePipeOperator);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(56);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(57);
      selectOperator();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(58);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(59);
      whereOperator();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(60);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(61);
      orderByOperator();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(62);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(63);
      unionOperator();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(64);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(65);
      intersectOperator();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(66);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(67);
      exceptOperator();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(68);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(69);
      assertOperator();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(70);
      match(PipeQLParser::PIPE_OPERATOR);
      setState(71);
      limitClause();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectOperatorContext ------------------------------------------------------------------

PipeQLParser::SelectOperatorContext::SelectOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::SelectOperatorContext::SELECT() {
  return getToken(PipeQLParser::SELECT, 0);
}

std::vector<PipeQLParser::SelectExpressionContext *> PipeQLParser::SelectOperatorContext::selectExpression() {
  return getRuleContexts<PipeQLParser::SelectExpressionContext>();
}

PipeQLParser::SelectExpressionContext* PipeQLParser::SelectOperatorContext::selectExpression(size_t i) {
  return getRuleContext<PipeQLParser::SelectExpressionContext>(i);
}


size_t PipeQLParser::SelectOperatorContext::getRuleIndex() const {
  return PipeQLParser::RuleSelectOperator;
}

void PipeQLParser::SelectOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectOperator(this);
}

void PipeQLParser::SelectOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectOperator(this);
}


std::any PipeQLParser::SelectOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitSelectOperator(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::SelectOperatorContext* PipeQLParser::selectOperator() {
  SelectOperatorContext *_localctx = _tracker.createInstance<SelectOperatorContext>(_ctx, getState());
  enterRule(_localctx, 6, PipeQLParser::RuleSelectOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(PipeQLParser::SELECT);
    setState(75);
    selectExpression();
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PipeQLParser::T__0) {
      setState(76);
      match(PipeQLParser::T__0);
      setState(77);
      selectExpression();
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereOperatorContext ------------------------------------------------------------------

PipeQLParser::WhereOperatorContext::WhereOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::WhereOperatorContext::WHERE() {
  return getToken(PipeQLParser::WHERE, 0);
}

PipeQLParser::BooleanExpressionContext* PipeQLParser::WhereOperatorContext::booleanExpression() {
  return getRuleContext<PipeQLParser::BooleanExpressionContext>(0);
}


size_t PipeQLParser::WhereOperatorContext::getRuleIndex() const {
  return PipeQLParser::RuleWhereOperator;
}

void PipeQLParser::WhereOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhereOperator(this);
}

void PipeQLParser::WhereOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhereOperator(this);
}


std::any PipeQLParser::WhereOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitWhereOperator(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::WhereOperatorContext* PipeQLParser::whereOperator() {
  WhereOperatorContext *_localctx = _tracker.createInstance<WhereOperatorContext>(_ctx, getState());
  enterRule(_localctx, 8, PipeQLParser::RuleWhereOperator);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(PipeQLParser::WHERE);
    setState(84);
    booleanExpression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OrderByOperatorContext ------------------------------------------------------------------

PipeQLParser::OrderByOperatorContext::OrderByOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::OrderByOperatorContext::ORDER_BY() {
  return getToken(PipeQLParser::ORDER_BY, 0);
}

std::vector<PipeQLParser::OrderExpressionContext *> PipeQLParser::OrderByOperatorContext::orderExpression() {
  return getRuleContexts<PipeQLParser::OrderExpressionContext>();
}

PipeQLParser::OrderExpressionContext* PipeQLParser::OrderByOperatorContext::orderExpression(size_t i) {
  return getRuleContext<PipeQLParser::OrderExpressionContext>(i);
}


size_t PipeQLParser::OrderByOperatorContext::getRuleIndex() const {
  return PipeQLParser::RuleOrderByOperator;
}

void PipeQLParser::OrderByOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOrderByOperator(this);
}

void PipeQLParser::OrderByOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOrderByOperator(this);
}


std::any PipeQLParser::OrderByOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitOrderByOperator(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::OrderByOperatorContext* PipeQLParser::orderByOperator() {
  OrderByOperatorContext *_localctx = _tracker.createInstance<OrderByOperatorContext>(_ctx, getState());
  enterRule(_localctx, 10, PipeQLParser::RuleOrderByOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(PipeQLParser::ORDER_BY);
    setState(87);
    orderExpression();
    setState(92);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PipeQLParser::T__0) {
      setState(88);
      match(PipeQLParser::T__0);
      setState(89);
      orderExpression();
      setState(94);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnionOperatorContext ------------------------------------------------------------------

PipeQLParser::UnionOperatorContext::UnionOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::UnionOperatorContext::UNION() {
  return getToken(PipeQLParser::UNION, 0);
}

std::vector<PipeQLParser::QueryContext *> PipeQLParser::UnionOperatorContext::query() {
  return getRuleContexts<PipeQLParser::QueryContext>();
}

PipeQLParser::QueryContext* PipeQLParser::UnionOperatorContext::query(size_t i) {
  return getRuleContext<PipeQLParser::QueryContext>(i);
}


size_t PipeQLParser::UnionOperatorContext::getRuleIndex() const {
  return PipeQLParser::RuleUnionOperator;
}

void PipeQLParser::UnionOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnionOperator(this);
}

void PipeQLParser::UnionOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnionOperator(this);
}


std::any PipeQLParser::UnionOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitUnionOperator(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::UnionOperatorContext* PipeQLParser::unionOperator() {
  UnionOperatorContext *_localctx = _tracker.createInstance<UnionOperatorContext>(_ctx, getState());
  enterRule(_localctx, 12, PipeQLParser::RuleUnionOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(PipeQLParser::UNION);
    setState(96);
    _la = _input->LA(1);
    if (!(_la == PipeQLParser::T__1

    || _la == PipeQLParser::T__2)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(97);
    match(PipeQLParser::T__3);
    setState(98);
    query();
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PipeQLParser::T__0) {
      setState(99);
      match(PipeQLParser::T__0);
      setState(100);
      query();
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(106);
    match(PipeQLParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntersectOperatorContext ------------------------------------------------------------------

PipeQLParser::IntersectOperatorContext::IntersectOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::IntersectOperatorContext::INTERSECT() {
  return getToken(PipeQLParser::INTERSECT, 0);
}

std::vector<PipeQLParser::QueryContext *> PipeQLParser::IntersectOperatorContext::query() {
  return getRuleContexts<PipeQLParser::QueryContext>();
}

PipeQLParser::QueryContext* PipeQLParser::IntersectOperatorContext::query(size_t i) {
  return getRuleContext<PipeQLParser::QueryContext>(i);
}


size_t PipeQLParser::IntersectOperatorContext::getRuleIndex() const {
  return PipeQLParser::RuleIntersectOperator;
}

void PipeQLParser::IntersectOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIntersectOperator(this);
}

void PipeQLParser::IntersectOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIntersectOperator(this);
}


std::any PipeQLParser::IntersectOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitIntersectOperator(this);
  else
    return visitor->visitChildren(this);
}

PipeQLParser::IntersectOperatorContext* PipeQLParser::intersectOperator() {
  IntersectOperatorContext *_localctx = _tracker.createInstance<IntersectOperatorContext>(_ctx, getState());
  enterRule(_localctx, 14, PipeQLParser::RuleIntersectOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(PipeQLParser::INTERSECT);
    setState(109);
    _la = _input->LA(1);
    if (!(_la == PipeQLParser::T__1

    || _la == PipeQLParser::T__2)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(110);
    match(PipeQLParser::T__3);
    setState(111);
    query();
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PipeQLParser::T__0) {
      setState(112);
      match(PipeQLParser::T__0);
      setState(113);
      query();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(119);
    match(PipeQLParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExceptOperatorContext ------------------------------------------------------------------

PipeQLParser::ExceptOperatorContext::ExceptOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PipeQLParser::ExceptOperatorContext::EXCEPT() {
  return getToken(PipeQLParser::EXCEPT, 0);
}

std::vector<PipeQLParser::QueryContext *> PipeQLParser::ExceptOperatorContext::query() {
  return getRuleContexts<PipeQLParser::QueryContext>();
}

PipeQLParser::QueryContext* PipeQLParser::ExceptOperatorContext::query(size_t i) {
  return getRuleContext<PipeQLParser::QueryContext>(i);
}


size_t PipeQLParser::ExceptOperatorContext::getRuleIndex() const {
  return PipeQLParser::RuleExceptOperator;
}

void PipeQLParser::ExceptOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExceptOperator(this);
}

void PipeQLParser::ExceptOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PipeQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExceptOperator(this);
}


std::any PipeQLParser::ExceptOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PipeQLVisitor*>(visitor))
    return parserVisitor->visitExceptOperator(this);
  else
    return visitor->visitChildren(this);
}
